syntax = "proto3";

package hnclone;

option java_package = "com.asadmshah.hnclone.models";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME;

message RequestSession {
    uint32 id = 1;
    uint64 issued = 2;
    uint64 expire = 3;
}